--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,28 +19,28 @@
 </head>
 <body>
 
-<div class="container">
-
-  <div class="col-sm-3">
+<div class="container-fluid">
+  <div class="col-md-1">
     <a href="{{ site.baseurl }}/index.html">
-      <img id="about" src="{{ site.baseurl }}/img/logo.jpg" height="128px" width="128px" />
+      <img id="about" src="{{ site.baseurl }}/img/logo.png" height="128px" width="" />
     </a>
-    {% for i in site.urls %}
-    <a class="about" href="{{ i.url }}">{{ i.text }}</a>
-    {% endfor %}
-
-    {% if site.about %}
-    <div id="about">
-      <strong>about</strong>
-      {{ site.about }}
-    </div>
-    {% endif %}
   </div>
 
-  <div class="col-sm-8 col-offset-1">
+  <div class="col-md-1">
+    {% for i in site.urls %}
+    <a class="about" href="{{ i.url }}">
+      {{ i.text }}
+    </a>
+    {% endfor %}
+  </div>
+
+  <div class="col-md-1 text-center">
 
     {{ content }}
 
+  </div>
+
+  <div class="col-md-1 text-center">
     <footer>
       &copy; {{ site.title }}
       {% if site.github %}
