--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
 <body>
 
 <div class="container-fluid">
-  <div class="col-md-1">
+  <div class="col-md-1 text-center">
     <a href="{{ site.baseurl }}/index.html">
       <img id="about" src="{{ site.baseurl }}/img/logo.png" height="128px" width="" />
     </a>
