--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
 <body>
 <div class="text-center">
   <a href="{{ site.baseurl }}/index.html">
-    <img id="about" src="{{ site.baseurl }}/img/logo.png" height="128px" width="" />
+    <img id="about" src="{{ site.baseurl }}/img/logo.png" width="90%" />
   </a>
 </div>
 
